Lots of CSS changes to prettify the main view
- Fix bug where Noto Sans bold was not working
- Adjust padding and such with GlobalHeader so that the hover effect works properly
- Overhaul the margins of toots
- Add fa-fw to the icons in the sidemenu to fix text alignment
- Make side menu sizes smaller

--- a/src/renderer/assets/fonts/fonts.css
+++ b/src/renderer/assets/fonts/fonts.css
@@ -9,3 +9,35 @@
 		url("./NotoSans-Regular.ttf") format("truetype");
 }
 
+/* === Noto Sans - bold */
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: normal;
+	font-weight: 700;
+	src: url("./NotoSans-Bold.ttf");
+	src: local("Noto Sans Bold"),
+		local("NotoSans-Bold"),
+		url("./NotoSans-Bold.ttf") format("truetype");
+}
+
+/* === Noto Sans - bold italic */
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: italic;
+	font-weight: 700;
+	src: url("./NotoSans-BoldItalic.ttf");
+	src: local("Noto Sans BoldItalic"),
+		local("NotoSans-BoldItalic"),
+		url("./NotoSans-BoldItalic.ttf") format("truetype");
+}
+
+/* === Noto Sans - italic */
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: italic;
+	font-weight: 400;
+	src: url("./NotoSans-Italic.ttf");
+	src: local("Noto Sans Italic"),
+		local("NotoSans-Italic"),
+		url("./NotoSans-Italic.ttf") format("truetype");
+}
