--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.emojione {
+  height: 1.8rem;
+  display: inline;
+}
+
+.account-name .emojione {
+  height: 1.2rem;
+}
