--- a/renderer/app.css
+++ b/renderer/app.css
@@ -39,26 +39,24 @@
 .timeline-scrollable {
   overflow-y: auto;
   overflow-x: auto;
+}
 
-  &::-webkit-scrollbar {
-    width: 6px !important;
-    height: 6px !important;
-  }
+.timeline-scrollable::-webkit-scrollbar {
+  width: 6px !important;
+  height: 6px !important;
+}
 
-  &::-webkit-scrollbar-thumb {
-    background-color: rgb(203 213 225);
-    border-radius: 4px !important;
-    opacity: 0;
-  }
+.timeline-scrollable::-webkit-scrollbar-thumb {
+  background-color: rgb(203 213 225);
+  border-radius: 4px !important;
+  opacity: 0;
+}
 
-  &::-webkit-scrollbar-track {
-    border-radius: 4px !important;
-    background-color: rgb(241 245 249);
-  }
+.timeline-scrollable::-webkit-scrollbar-track {
+  border-radius: 4px !important;
+  background-color: rgb(241 245 249);
+}
 
-  &:hover {
-    &::-webkit-scrollbar-thumb {
-      opacity: 1;
-    }
-  }
+.timeline-scrollable:hover::-webkit-scrollbar-thumb {
+  opacity: 1;
 }
