refs #4653 Change button and link color

--- a/renderer/app.css
+++ b/renderer/app.css
@@ -85,3 +85,15 @@
 .timeline-scrollable:hover::-webkit-scrollbar-thumb {
   opacity: 1;
 }
+
+button:focus {
+  outline: none;
+}
+
+a {
+  color: blue;
+}
+
+ a:hover {
+  text-decoration: underline;
+}
