refs #5056 Change default fonts

--- a/renderer/app.scss
+++ b/renderer/app.scss
@@ -352,3 +352,7 @@ a {
     @apply text-blue-400;
   }
 }
+
+body {
+  font-family: Apple-System,"Hiragino Kaku Gothic ProN",Hiragino Sans GB,Arial,Helvetica,PingFang SC,Meiryo,Microsoft YaHei,STXihei,sans-serif;
+}
